# libemojicons

./: Cargo.toml  README.md
include/: emojicons.h
