[package]
name = "emojicons"
version = "1.0.0"
description = "A library to parse :emoji: notation to unicode representation"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/libemojicons"
repository = "https://github.com/thechampagne/libemojicons"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "emojicons"
crate-type =["cdylib","staticlib"]

[dependencies]
emojicons = "1.0.1"